Fixed contrast issue on the title.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h1 {
     background-color: rgb(255, 255, 255);
     padding: 1%;
     font-size: 2.3rem;
-    color: rgb(0, 218, 94);
+    color: rgb(200, 125, 76);
     border-radius: 0 0.625rem;
     box-shadow: rgb(0 0 0) 0.3125rem 0.3125rem 0.9375rem 0rem;
     text-shadow: -0.0625rem -0.0625rem rgb(0, 0, 0),
